# boise-trails-ai

./: .gitignore  AGENTS.md  README.md  TODO.md  clip_pbf.py  clip_roads.py  clip_srtm.py  debug  index.html  outing-menu-map-data.json  outing-menu-map.html  outing-menu.md  planner_config.json  profile_challenge_planner.py  profile_summary.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.toml  requirements.txt  segment_tracking.json  setup.py  trail_route_ai_demo.ipynb
archive/legacy-root-2025/: .gitignore.txt  ARCHITECTURE.md  ARCHIVE_NOTE.md  ERROR_CODES.md  IMPLEMENTATION_PROMPT.md  ISSUES.md  OPTIMIZATION_FEEDBACK.md  README.legacy.md  README.md  TRAILHEAD_ROUTING_APPROACH.md  bugs.txt  clip_srtm.py  create_route_gpx.py  debug  diagnose_inefficiency.py  pyproject.toml  requirements.txt  run_efficient_planner.py  scratchpad.md  show_efficiency_comparison.py  test_dedup.py  test_final.py  test_full_plan.py  test_improvement.py  test_loop_count.py  test_planner.py  test_progress.py  test_stuck_issue.py
archive/legacy-root-2025/config/: daily_hours.json  daily_planner_config.yaml
archive/legacy-root-2025/data/: segment_perf.csv
archive/legacy-root-2025/tests/: README_ROUTING_TESTS.md  conftest.py  test_cache_utils.py  test_clip_pbf.py  test_cluster_score.py  test_daily_planner_output.py  test_gpx_to_csv.py  test_nearest_node.py  test_progress_pct.py  test_routing_goals.py  test_single_loop_day.py  test_small_one_way_cluster.py  test_split_cluster_by_one_way.py  test_time_utils.py  test_trailhead_approach.py  test_virtual_node_connectors.py
(+1662 files in other folders)
